# notion-ai-webhook

./: Cargo.toml  Dockerfile
src/: api.rs  automation.rs  lib.rs  main.rs  router.rs  service.rs  types.rs
src/automation/: diary.rs  review.rs  weekly_report.rs
src/prompts/: diary_review.txt  review_prompt.txt  weekly_report.txt
src/types/: gemini.rs  notion.rs
